# vision_computadora_2

./: .env.example  .gitignore  README.md  REPRODUCIBILITY.md  presentacion.html  pyproject.toml
data/: dataset_config.json  demo_stats.json  eval_results.json  latency_results.json
notebooks/: 01_setup_and_dataset.ipynb  02_model_training.ipynb  03_model_comparison.ipynb  04_tracking_demo.ipynb  colab_completo.ipynb
paper/: monitoreo_epp_construccion.tex
src/ppe_monitor/: __init__.py
